--- a/components/SliderItem/sliderItem.module.css
+++ b/components/SliderItem/sliderItem.module.css
@@ -1,4 +1,7 @@
 .sliderItem{
+ 
+}
+.sliderWrapper{
   box-shadow: 1px 1px 14px -4px rgba(0,0,0,0.75);
   padding: 1rem;
   margin: 1rem;
@@ -14,14 +17,8 @@
   height: 100%;
   object-fit: contain;
 }
-.sliderLink{
-  
-}
 .sliderLink:hover{
   text-decoration: underline;
   text-decoration-color: aquamarine;
   transition: all .5s linear;
-}
-.textBlock{
-
 }
